--- a/estilos/estilosCabecera.css
+++ b/estilos/estilosCabecera.css
@@ -2,15 +2,20 @@
     box-sizing: border-box;
     padding: 0;
 }
+a{
+    text-decoration: none;
+}
+body{
+    background-color: azure;
+    min-width: 380px;
+}
+    
+/*Estilos cabezera*/
 body > header{
     border: 1px solid;
     text-align: center;
     background-color: brown;
     
-}
-body > footer{
-    background-color: aqua;
-    text-align: center;
 }
 
 body > .barra-navegacion{
@@ -40,12 +45,22 @@ body > .barra-navegacion{
             nav > ul > li > a{
                 background-color: aqua;
                 border: 1px solid #111;
-                text-decoration: none;
                 color: #111;
             }
             nav > ul > li > a:hover{
                 background-color: rgb(87, 87, 255);
             }
+
+/*Estilos para el foother*/
+body > footer{
+    background-color: aqua;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 .2em;
+}
+
 
 /*Despliega el menu*/
 #checkMenu:checked + nav > ul{
@@ -76,8 +91,15 @@ body > .barra-navegacion{
             display: none;
         }
 }
+@media all and (min-width:500px){
+    #checkMenu:checked + nav > ul{
+        display: flex;
+        
+    }
+}
 @media all and (min-width:600px){
     nav > ul > li > a>span:last-child{
         display: inline-block;
     }
+    /*Corrige que si el menu esta desplegado no aparezca el display en block*/
 }
