--- a/estilos/estilosAyuda.css
+++ b/estilos/estilosAyuda.css
@@ -7,7 +7,7 @@ body > section.contenido > h1{
     border-bottom: 1px solid #111;
 }
 table{
-    margin-left: 4em;
+    margin: 1em 0;
     caption-side: bottom;
     margin-left: auto;
     margin-right: auto;
@@ -20,12 +20,16 @@ table{
         font-size: small;
     }
     th{
-        background-color: rgb(158, 158, 158);
+        background-color: var(--color-fondo-columnas);
     }
     td,th{
         border: 1px solid #111;
         padding: .2em .3em;
     }
+body > .contenido > ul{
+    margin:.2em 2em;
+}
+
 @media all and (min-width:600px){
     th{
         width: 40%;
